--- a/おまけ/index.htm
+++ b/おまけ/index.htm
@@ -5,6 +5,8 @@
 <title>おまけ</title>
 </head>
 <body>
-いろいろあります。
+いろいろあります。<br>
+<a href="かころぐβサジェスト機能.js">かころぐβサジェスト機能</a><br>
+かころぐβの本文検索で実行してください。検索したい板名を入力すると板名選択を絞れます。<br>
 </body>
 </html>
