--- a/おまけ/index.htm
+++ b/おまけ/index.htm
@@ -7,6 +7,6 @@
 <body>
 いろいろあります。<br>
 <a href="かころぐβサジェスト機能.js">かころぐβサジェスト機能</a><br>
-かころぐβの本文検索で実行してください。検索したい板名を入力すると板名選択を絞れます。<br>
+かころぐβ(2025/1/25 11:26時点)の本文検索で実行してください。検索したい板名を入力すると板名選択を絞れます。<br>
 </body>
 </html>
