--- a/おまけ/index.htm
+++ b/おまけ/index.htm
@@ -6,7 +6,9 @@
 </head>
 <body>
 いろいろあります。<br>
-<a href="かころぐβサジェスト機能.js">かころぐβサジェスト機能</a><br>
+<a href="./かころぐβサジェスト機能.js">かころぐβサジェスト機能</a><br>
 かころぐβ(2025/1/25 11:26時点)の本文検索で実行してください。検索したい板名を入力すると板名選択を絞れます。<br>
+<a href="./コメントURL取得.js"></a><br>
+seesaawiki(2025/1/28 12:49時点)で実行してください。コメント欄でクリックした箇所のURLを取得できます。返信欄のうち1つだけを取得も可。<br>
 </body>
 </html>
