--- a/おまけ/index.htm
+++ b/おまけ/index.htm
@@ -7,8 +7,11 @@
 <body>
 いろいろあります。<br>
 <a href="./かころぐβサジェスト機能.js">かころぐβサジェスト機能</a><br>
-かころぐβ(2025/1/25 11:26時点)の本文検索で実行してください。検索したい板名を入力すると板名選択を絞れます。<br>
-<a href="./コメントURL取得.js"></a><br>
-seesaawiki(2025/1/28 12:49時点)で実行してください。コメント欄でクリックした箇所のURLを取得できます。返信欄のうち1つだけを取得も可。<br>
+かころぐβ(2026/1/25 11:26時点)の本文検索で実行してください。検索したい板名を入力すると板名選択を絞れます。<br>
+<a href="./コメントURL取得.js">seesaawikiのコメントのURLを取得する</a><br>
+seesaawiki(2026/1/28 12:49時点)で実行してください。コメント欄でクリックした箇所のURLを取得できます。返信欄のうち1つだけを取得も可。<br>
+<a href="./youtubeVideo取得.js">youtubeの動画ID一覧を取得する</a><br>
+youtube.com/@~/videosかyoutube.com/@~/streamsの画面(2026/2/25 0:00時点)で実行してください。動画のID一覧をテキストファイルで取得できます。<br>
+idsのブロックのreturn custom
 </body>
 </html>
