--- a/おまけ/index.htm
+++ b/おまけ/index.htm
@@ -12,6 +12,6 @@
 seesaawiki(2026/1/28 12:49時点)で実行してください。コメント欄でクリックした箇所のURLを取得できます。返信欄のうち1つだけを取得も可。<br>
 <a href="./youtubeVideo取得.js">youtubeの動画ID一覧を取得する</a><br>
 youtube.com/@~/videosかyoutube.com/@~/streamsの画面(2026/2/25 0:00時点)で実行してください。動画のID一覧をテキストファイルで取得できます。<br>
-idsのブロックのreturn custom
+ブックマークに登録する際、idsのブロックのreturn customURLsに"https://~"といった文字列を追加することで任意のサイトのリンクを作成可能です。<br>
 </body>
 </html>
