--- a/おまけ/index.htm
+++ b/おまけ/index.htm
@@ -16,5 +16,8 @@ youtube.com/@~/videosかyoutube.com/@~/streamsの画面(2026/2/25 0:00時点)で
 <a href="./shorts取得.js">youtube.shortsの動画ID一覧を取得する</a><br>
 youtube.com/@~/shortsの画面(2026/2/25 0:00時点)で実行してください。動画のID一覧をテキストファイルで取得できます。<br>
 ブックマークに登録する際、idsのブロックのreturn customURLsに"https://~"といった文字列を追加することで任意のサイトのリンクを作成可能です。<br>
+<a href="./youtubeの動画を上から消す">動画ページのサムネを上から消す</a><br>
+youtube.com/@~/の画面(2026/2/25 0:00時点)で実行してください。上から順に入力した件数分非表示にします。<br>
+下の方にある動画を見やすくできます。間違って非表示にした場合はリロードしてください。<br>
 </body>
 </html>
